--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ pkg_check_modules(OpenCv REQUIRED opencv)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp Improved_seam.hpp Improved_seam.cpp)
 
 set(CMAKE_BUILD_TYPE Debug)
 
